--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@react-router/node": "^7.0.2",
     "@react-router/serve": "^7.0.2",
+    "@tanstack/react-query": "^5.62.7",
+    "@wagmi/connectors": "^5.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.17",
@@ -24,6 +26,8 @@
     "react-router": "^7.0.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "viem": "2.x",
+    "wagmi": "^2.14.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
