--- a/web/package.json
+++ b/web/package.json
@@ -15,11 +15,13 @@
     "@react-router/node": "^7.0.2",
     "@react-router/serve": "^7.0.2",
     "@tanstack/react-query": "^5.62.7",
+    "@wagmi/cli": "^2.1.21",
     "@wagmi/connectors": "^5.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.17",
     "lucide-react": "^0.468.0",
+    "plugins": "link:@wagmi/cli/plugins",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
