--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -1,7 +1,81 @@
 {
-  "name": "hardhat-project",
+  "name": "@semaphore-protocol/cli-template-contracts-hardhat",
+  "version": "4.8.2",
+  "description": "Semaphore Hardhat template.",
+  "license": "Unlicense",
+  "files": [
+    "files.tgz",
+    "contracts/",
+    "tasks/",
+    "test/",
+    ".editorconfig",
+    ".env.example",
+    ".eslintignore",
+    ".eslintrc.json",
+    ".prettierignore",
+    ".prettierrc.json",
+    "hardhat.config.ts",
+    "tsconfig.json",
+    "README.md",
+    ".solhint.json"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "scripts": {
+    "oracle:dev": "tsx watch --tsconfig ./tsconfig.hono.json oracle/server.ts",
+    "dev": "hardhat node & yarn deploy --network localhost",
+    "compile": "hardhat compile",
+    "deploy": "hardhat compile && hardhat deploy",
+    "verify": "hardhat verify",
+    "test": "hardhat test",
+    "test:report-gas": "REPORT_GAS=true hardhat test",
+    "test:coverage": "hardhat coverage",
+    "typechain": "hardhat typechain",
+    "lint": "eslint . --ext .js,.ts && solhint 'contracts/**/*.sol'",
+    "prettier": "prettier -c --plugin=prettier-plugin-solidity .",
+    "prettier:write": "prettier -w --plugin=prettier-plugin-solidity ."
+  },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.17"
-  }
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@semaphore-protocol/core": "4.8.2",
+    "@semaphore-protocol/hardhat": "4.8.2",
+    "@semaphore-protocol/utils": "4.8.2",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
+    "@types/chai": "^4.2.0",
+    "@types/eslint": "^8",
+    "@types/mocha": ">=9.1.0",
+    "@types/node": "^20.11.20",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "chai": "^4.2.0",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "ethers": "^6.13.4",
+    "hardhat": "^2.20.1",
+    "hardhat-gas-reporter": "^1.0.8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-solidity": "^1.3.1",
+    "solhint": "^4.1.1",
+    "solidity-coverage": "^0.8.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
+    "typechain": "^8.3.0",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@hono/node-server": "^1.13.7",
+    "@semaphore-protocol/contracts": "4.8.2",
+    "hono": "^4.6.14"
+  },
+  "packageManager": "yarn@4.1.0"
 }
