--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -27,6 +27,7 @@
     "oracle:build": "tsc -p tsconfig.hono.json",
     "oracle:start": "node oracle-dist/server.js",
     "dev": "hardhat node & yarn deploy --network localhost",
+    "stop": "npx kill-port 8545",
     "compile": "hardhat compile",
     "deploy": "hardhat compile && hardhat deploy",
     "verify": "hardhat verify",
@@ -51,6 +52,7 @@
     "@typechain/hardhat": "^9.0.0",
     "@types/chai": "^4.2.0",
     "@types/eslint": "^8",
+    "@types/kill-port": "^2",
     "@types/mocha": ">=9.1.0",
     "@types/node": "^20.11.20",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
@@ -65,6 +67,7 @@
     "ethers": "^6.13.4",
     "hardhat": "^2.20.1",
     "hardhat-gas-reporter": "^1.0.8",
+    "kill-port": "^2.0.1",
     "prettier": "^3.2.5",
     "prettier-plugin-solidity": "^1.3.1",
     "solhint": "^4.1.1",
