--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -79,7 +79,9 @@
   "dependencies": {
     "@hono/node-server": "^1.13.7",
     "@semaphore-protocol/contracts": "4.8.2",
-    "hono": "^4.6.14"
+    "hono": "^4.6.14",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "packageManager": "yarn@4.1.0"
 }
