--- a/blockchain/tsconfig.hono.json
+++ b/blockchain/tsconfig.hono.json
@@ -10,9 +10,8 @@
       ],
       "jsx": "react-jsx",
       "jsxImportSource": "hono/jsx",
-      "outDir": "oracle-dist",
-      "rootDir": "oracle",
-      "noEmit": true
+      "outDir": "./oracle-dist",
+      "rootDir": "./oracle"
     },
     "include": ["oracle/**/*"] 
   }
