working test script

--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -26,13 +26,12 @@
     "oracle:dev": "tsx watch --tsconfig ./tsconfig.hono.json oracle/server.ts",
     "oracle:build": "tsc -p tsconfig.hono.json",
     "oracle:start": "node oracle-dist/server.js",
-    "dev": "hardhat node & yarn deploy --network localhost",
+    "node:local": "hardhat node",
     "stop": "npx kill-port 8545",
     "compile": "hardhat compile",
-    "deploy": "hardhat compile && hardhat deploy",
+    "deploy": "hardhat compile && hardhat deploy --network localhost",
     "verify": "hardhat verify",
     "test": "hardhat test",
-    "test:report-gas": "REPORT_GAS=true hardhat test",
     "test:coverage": "hardhat coverage",
     "typechain": "hardhat typechain",
     "lint": "eslint . --ext .js,.ts && solhint 'contracts/**/*.sol'",
