--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -57,6 +57,7 @@
     "@types/kill-port": "^2",
     "@types/mocha": ">=9.1.0",
     "@types/node": "^20.11.20",
+    "@types/yargs": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "chai": "^4.2.0",
@@ -84,7 +85,8 @@
     "@semaphore-protocol/contracts": "4.8.2",
     "hono": "^4.6.14",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "yargs": "^17.7.2"
   },
   "packageManager": "yarn@4.1.0"
 }
