fix: client async call. Client is not working yet

--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -28,7 +28,8 @@
     "oracle-api:start": "node oracle-dist/api/server.js",
     "oracle-node:dev": "tsx watch --tsconfig ./tsconfig.hono.json oracle/off-chain/server.ts",
     "oracle-node:start": "node oracle-dist/off-chain/server.js",
-    "oracle-client": "tsx watch --tsconfig ./tsconfig.hono.json oracle/client.ts",
+    "oracle-client:dev": "tsx watch --tsconfig ./tsconfig.hono.json oracle/client.ts",
+    "oracle-client:start": "node oracle-dist/client.js",
     "node:local": "hardhat node",
     "dev": "hardhat node & yarn deploy --network localhost",
     "stop": "npx kill-port 8545",
