--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,9 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@react-router/node": "^7.0.2",
     "@react-router/serve": "^7.0.2",
+    "@semaphore-protocol/core": "^4.8.2",
     "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-query-devtools": "^5.62.10",
     "@wagmi/cli": "^2.1.21",
     "@wagmi/connectors": "^5.6.1",
     "class-variance-authority": "^0.7.1",
