--- a/web/package.json
+++ b/web/package.json
@@ -32,7 +32,8 @@
     "tailwindcss-animate": "^1.0.7",
     "viem": "2.x",
     "wagmi": "^2.14.1",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@react-router/dev": "^7.0.2",
