--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -86,6 +86,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
+    "@openzeppelin/contracts": "^5.1.0",
     "@semaphore-protocol/contracts": "4.8.2",
     "hono": "^4.6.14",
     "sqlite": "^5.1.1",
