fix: frontend integration

--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -30,8 +30,8 @@
     "oracle-node:start": "node oracle-dist/off-chain/server.js",
     "oracle-client:dev": "tsx watch --tsconfig ./tsconfig.hono.json oracle/client.ts",
     "oracle-client:start": "node oracle-dist/client.js",
-    "node:local": "hardhat node",
-    "dev": "hardhat node & yarn deploy --network localhost",
+    "node:local": "hardhat node --hostname 0.0.0.0",
+    "dev": "hardhat node --hostname 0.0.0.0 & yarn deploy --network localhost",
     "stop": "npx kill-port 8545",
     "compile": "hardhat compile",
     "deploy:voting": "hardhat compile && hardhat deployVoting --network localhost",
